--- a/zg-config-repo/config-repo/api-gateway.properties
+++ b/zg-config-repo/config-repo/api-gateway.properties
@@ -51,6 +51,9 @@ zuul.add-proxy-headers=true
 zuul.routes.zuul-server.path=/local/**
 zuul.routes.zuul-server.url=forward:/local
 
+zuul.routes micro-order.path=/order/**
+zuul.routes.micro-order.url=micro-order-security
+
 zuul.routes.blog.path=/blog/**
 zuul.routes.blog.url=http://localhost:8003/
 
