--- a/zg-config-repo/config-repo/api-gateway.properties
+++ b/zg-config-repo/config-repo/api-gateway.properties
@@ -52,7 +52,10 @@ zuul.routes.zuul-server.path=/local/**
 zuul.routes.zuul-server.url=forward:/local
 
 zuul.routes micro-order.path=/order/**
-zuul.routes.micro-order.url=micro-order-security
+zuul.routes.micro-order.serviceId=micro-order-security
+
+zuul.routes.oauth.path=/oauth/**
+zuul.routes.oauth.serviceId=micro-security
 
 zuul.routes.blog.path=/blog/**
 zuul.routes.blog.url=http://localhost:8003/
