--- a/zg-config-repo/config-repo/api-gateway.properties
+++ b/zg-config-repo/config-repo/api-gateway.properties
@@ -51,10 +51,10 @@ zuul.add-proxy-headers=true
 zuul.routes.zuul-server.path=/local/**
 zuul.routes.zuul-server.url=forward:/local
 
-zuul.routes micro-order.path=/order/**
+zuul.routes.micro-order.path=/order/**
 zuul.routes.micro-order.serviceId=micro-order-security
 
-zuul.routes.oauth.path=/oauth/**
+zuul.routes.oauth.path=/order/**
 zuul.routes.oauth.serviceId=micro-security
 
 zuul.routes.blog.path=/blog/**
