--- a/zg-config-repo/config-repo/api-gateway.properties
+++ b/zg-config-repo/config-repo/api-gateway.properties
@@ -54,7 +54,7 @@ zuul.routes.zuul-server.url=forward:/local
 zuul.routes.micro-order.path=/order/**
 zuul.routes.micro-order.serviceId=micro-order-security
 
-zuul.routes.oauth.path=/order/**
+zuul.routes.oauth.path=/oauth/**
 zuul.routes.oauth.serviceId=micro-security
 
 zuul.routes.blog.path=/blog/**
