--- a/zg-config-repo/config-repo/api-gateway.properties
+++ b/zg-config-repo/config-repo/api-gateway.properties
@@ -53,9 +53,11 @@ zuul.routes.zuul-server.url=forward:/local
 
 zuul.routes.micro-order.path=/order/**
 zuul.routes.micro-order.serviceId=micro-order-security
+zuul.routes.micro-order.sensitive-headers=
 
 zuul.routes.oauth.path=/oauth/**
 zuul.routes.oauth.serviceId=micro-security
+zuul.routes.oauth.sensitive-headers=
 
 zuul.routes.blog.path=/blog/**
 zuul.routes.blog.url=http://localhost:8003/
