--- a/zg-config-repo/config-repo/api-gateway.properties
+++ b/zg-config-repo/config-repo/api-gateway.properties
@@ -13,9 +13,22 @@ zuul.routes.micro-web.path=/web/**
 #zuul.routes.micro-order.url=http://localhost:8080/
 
 # key结构 ： zuul.routes.customName.serviceId=xxx
-# serviceId用于配置符合path的请求路径路由到的服务名称。
+# serviceId用于配置符合path的请求路径路由到的服务名称。  micro-web-jwt micro-web-security
 zuul.routes.micro-web.serviceId=micro-web-security
 
+#micro-security micro-security-db
+zuul.routes.auth.path=/auth/**
+zuul.routes.auth.serviceId=micro-security-db
+zuul.routes.auth.sensitive-headers=
+
+zuul.routes.jwt.path=/jwt/**
+zuul.routes.jwt.serviceId=micro-jwt
+zuul.routes.jwt.sensitive-headers=
+
+zuul.routes.micro-order.path=/order/**
+#micro-order-jwt micro-order-security
+zuul.routes.micro-order.serviceId=micro-order-security
+zuul.routes.micro-order.sensitive-headers=
 # ignored service id pattern
 # 配置不被zuul管理的服务列表。多个服务名称使用逗号','分隔。
 # 配置的服务将不被zuul代理。
@@ -51,14 +64,6 @@ zuul.add-proxy-headers=true
 zuul.routes.zuul-server.path=/local/**
 zuul.routes.zuul-server.url=forward:/local
 
-zuul.routes.micro-order.path=/order/**
-zuul.routes.micro-order.serviceId=micro-order-security
-zuul.routes.micro-order.sensitive-headers=
-
-zuul.routes.oauth.path=/oauth/**
-zuul.routes.oauth.serviceId=micro-security
-zuul.routes.oauth.sensitive-headers=
-
 zuul.routes.blog.path=/blog/**
 zuul.routes.blog.url=http://localhost:8003/
 
@@ -68,8 +73,8 @@ zuul.routes.flog.url=http://localhost:8004/
 zuul.routes.elog.path=/elog/**
 zuul.routes.elog.url=http://localhost:8005/
 
-zuul.routes.dlog.path=/dlog/**
-zuul.routes.dlog.url=http://localhost:8009/
+zuul.routes.clog.path=/clog/**
+zuul.routes.clog.url=http://localhost:8009/
 
 #全局关闭重试
 zuul.retryable=false
